--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -1,12 +1,12 @@
 {{>layout/header}}
 
-<h1>스프링부트로 시작하는 웹 서비스 Ver.2</h1>
+<h1>SpringBoot + AWS 웹 서비스 스터디 (with MR JOO)</h1>
 <div class="col-md-12">
     <div class="row">
         <div class="col-md-6">
             <a href="/posts/save" role="button" class="btn btn-primary">글 등록</a>
             {{#userName}}
-                Logged in as: <span id="user">{{userName}}</span>
+                LOG IN as: <span id="user">{{userName}}</span>
                 <a href="/logout" class="btn btn-info active" role="button">Logout</a>
             {{/userName}}
             {{^userName}}
@@ -22,6 +22,7 @@
         <tr>
             <th>게시글번호</th>
             <th>제목</th>
+            <th>내용</th>
             <th>작성자</th>
             <th>최종수정일</th>
         </tr>
@@ -31,6 +32,7 @@
             <tr>
                 <td>{{id}}</td>
                 <td><a href="/posts/update/{{id}}">{{title}}</a></td>
+                <td>{{content}}</td>
                 <td>{{author}}</td>
                 <td>{{modifiedDate}}</td>
             </tr>
