--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -6,7 +6,7 @@
         <div class="col-md-6">
             <a href="/posts/save" role="button" class="btn btn-primary">글 등록</a>
             {{#userName}}
-                LOG IN as: <span id="user">{{userName}}</span>
+                <a href="#" class="btn btn-success active" role="button">{{userName}}님! 환영합니다.</a>
                 <a href="/logout" class="btn btn-info active" role="button">Logout</a>
             {{/userName}}
             {{^userName}}
